<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layoutDirection="ltr"
    android:background="@color/white">
    <ImageView
        android:id="@+id/iconPermission"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginVertical="10dp"
        android:padding="8dp"
        android:src="@drawable/ic_folder"
        android:contentDescription="@null"/>
    <TextView
        android:id="@+id/textPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="16dp"
        android:textSize="18sp"
        android:textColor="@color/grey_800"
        android:text="@string/message_permission"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_300"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAllowed"
        style="@style/ThemeButtonPermission"
        app:rippleColor="@color/grey_300"
        app:backgroundTint="@color/white"
        android:text="@string/allow"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_300"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDenied"
        style="@style/ThemeButtonPermission"
        app:rippleColor="@color/grey_300"
        app:backgroundTint="@color/white"
        android:text="@string/deny"/>>
</LinearLayout>