<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:overScrollMode="never">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ThemeInputBoxDetail">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/displayFileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textColor="@color/grey_900"
                android:hint="@string/name_hint"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ThemeInputBoxDetail">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/displayParentFolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textColor="@color/grey_900"
                android:hint="@string/parent_folder_hint"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ThemeInputBoxDetail">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/displayPathFile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textColor="@color/grey_900"
                android:hint="@string/path_file_hint"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ThemeInputBoxDetail">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/displayFileSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textDirection="ltr"
                android:inputType="none"
                android:textColor="@color/grey_900"
                android:hint="@string/file_size_hint"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ThemeInputBoxDetail"
            app:hintTextColor="@color/light_blue_A400"
            android:layout_marginBottom="8dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/displayFileLastModified"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textColor="@color/grey_900"
                android:hint="@string/last_modified_hint"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>
